Added keys for other languages

--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -53,7 +53,7 @@
   "_quoteFooter.comment": "Quoted message footer text.",
   "userIsTyping": "{user} is typing",
   "usersAndUserAreTyping": "{users} and {user} are typing",
-  "usersAreTyping": "{usersAreTypingBeginning} {othersAmount, plural, one {{usersAreTypingOthersAmountOnePlural}} other {{usersAreTypingOthersAmountOtherPlural}}} {usersAreTypingEnding}",
+  "usersAreTyping": "{usersAreTypingUsersAndAmount} {othersAmount, plural, one {{usersAreTypingOthersAmountOnePlural}} other {{usersAreTypingOthersAmountOtherPlural}}} {usersAreTypingOthersAmountTyping}",
   "usersAreTypingUsersAndAmount": "{users} and {othersAmount}",
   "usersAreTypingOthersAmountTyping": "are typing",
   "usersAreTypingOthersAmountOnePlural": "other",
@@ -116,7 +116,7 @@
   "description": "Description",
   "create": "Create",
   "enter": "Enter",
-  "justInvited": "{justInvitedBeginning} {amount, plural, =0 {} one {{amountOnePlural}} other {{amountOtherPlural}}}.",
+  "justInvited": "{justInvitedCongratulations} {amount, plural, =0 {} one {{justInvitedAmountOnePlural}} other {{justInvitedAmountOtherPlural}}}.",
   "justInvitedCongratulations": "Congratulations! You just invited {user}",
   "justInvitedAmountOnePlural": "and one more member",
   "justInvitedAmountOtherPlural": "and {amount} more members",
