--- a/i18n/translations/es.json
+++ b/i18n/translations/es.json
@@ -53,7 +53,11 @@
   "_quoteFooter.comment": "Quoted message footer text.",
   "userIsTyping": "{user} está escribiendo",
   "usersAndUserAreTyping": "{users} y {user} están escribiendo",
-  "usersAreTyping": "{users} y {othersAmount} {othersAmount, plural, one {other} otros {others}} están escribiendo",
+  "usersAreTyping": "{usersAreTypingUsersAndAmount} {othersAmount, plural, one {{usersAreTypingOthersAmountOnePlural}} other {{usersAreTypingOthersAmountOtherPlural}}} {usersAreTypingOthersAmountTyping}",
+  "usersAreTypingUsersAndAmount": "{users} and {othersAmount}",
+  "usersAreTypingOthersAmountTyping": "are typing",
+  "usersAreTypingOthersAmountOnePlural": "other",
+  "usersAreTypingOthersAmountOtherPlural": "others",
   "imageWithDescription": "Imagen: [{description}]",
   "_imageWithDescription.comment": "**Used when rendered inline image from markdown with description.**",
   "imageWithoutDescription": "Imagen: [Sin descripción]",
@@ -112,7 +116,10 @@
   "description": "Descripción",
   "create": "Crear",
   "enter": "Entrar en",
-  "justInvited": "¡Enhorabuena! Acaba de invitar a {user} {amount, plural, =0 {} one {y un miembro más} other {y {amount} más miembros}}.",
+  "justInvited": "{justInvitedCongratulations} {amount, plural, =0 {} one {{justInvitedAmountOnePlural}} other {{justInvitedAmountOtherPlural}}}.",
+  "justInvitedCongratulations": "Congratulations! You just invited {user}",
+  "justInvitedAmountOnePlural": "and one more member",
+  "justInvitedAmountOtherPlural": "and {amount} more members",
   "sharedFiles": "Archivos compartidos",
   "pinnedMesages": "Mensajes Anclados",
   "groupInfo": "Información del Grupo",
@@ -333,7 +340,9 @@
   "labeledMessagesNoContentTitle": "Es aquí donde ocurre la magia.",
   "labeledMessagesNoContentText1": "{product} resume automáticamente sus conversaciones, para que pueda navegar y encontrarlas en base al contexto - lo llamamos \"inteligencia amplificada\".",
   "labeledMessagesNoContentText2": "Escriba algunas tareas o preguntas para verlas aparecer aquí!",
-  "newImportantMessages": "{amount} {amount, plural, one {nuevo mensaje importante} other {nuevos mensajes importantes}}",
+  "newImportantMessages": "{amount} {amount, plural, one {{newImportantMessagesOne}} other {{newImportantMessagesOther}}}",
+  "newImportantMessagesOne": "new important message",
+  "newImportantMessagesOther": "new important messages",
   "trainingModeHintWithLink": "IA: Este sistema está en modo de entrenamiento ({learnMoreLink})",
   "learnMoreLink": "más información",
   "_learnMoreLink.comment": "learn more link",
