--- a/i18n/translations/fr.json
+++ b/i18n/translations/fr.json
@@ -53,7 +53,11 @@
   "_quoteFooter.comment": "Quoted message footer text.",
   "userIsTyping": "{user} est en train d'écrire",
   "usersAndUserAreTyping": "{users} et {user} sont en train d'écrire",
-  "usersAreTyping": "{users} et {othersAmount} {autresMontant, au pluriel, un {other} autre {others}} sont en train d'écrire",
+  "usersAreTyping": "{usersAreTypingUsersAndAmount} {othersAmount, plural, one {{usersAreTypingOthersAmountOnePlural}} other {{usersAreTypingOthersAmountOtherPlural}}} {usersAreTypingOthersAmountTyping}",
+  "usersAreTypingUsersAndAmount": "{users} and {othersAmount}",
+  "usersAreTypingOthersAmountTyping": "are typing",
+  "usersAreTypingOthersAmountOnePlural": "other",
+  "usersAreTypingOthersAmountOtherPlural": "others",
   "imageWithDescription": "Image : [{description}]",
   "_imageWithDescription.comment": "**Used when rendered inline image from markdown with description.**",
   "imageWithoutDescription": "Image : [Pas de description]",
@@ -112,7 +116,10 @@
   "description": "Description",
   "create": "Créer",
   "enter": "Entrer",
-  "justInvited": "Félicitations ! Vous venez d'inviter {user} {amount, plural, =0 {} one {et un membre supplémentaire} other {et {amount} plus de membres}}.",
+  "justInvited": "{justInvitedCongratulations} {amount, plural, =0 {} one {{justInvitedAmountOnePlural}} other {{justInvitedAmountOtherPlural}}}.",
+  "justInvitedCongratulations": "Congratulations! You just invited {user}",
+  "justInvitedAmountOnePlural": "and one more member",
+  "justInvitedAmountOtherPlural": "and {amount} more members",
   "sharedFiles": "Fichiers partagés",
   "pinnedMesages": "Messages épinglés",
   "groupInfo": "Informations sur le groupe",
@@ -333,7 +340,9 @@
   "labeledMessagesNoContentTitle": "C'est là que la magie opère.",
   "labeledMessagesNoContentText1": "{product} résume automatiquement vos conversations, vous pouvez donc les parcourir et les retrouver en fonction du contexte - c'est ce que nous appelons \"l'intelligence amplifiée\".",
   "labeledMessagesNoContentText2": "Rédigez quelques tâches ou questions pour les voir apparaître ici !",
-  "newImportantMessages": "{amount}{montant, pluriel, un {nouveau message important} autre {nouveaux messages importants}}",
+  "newImportantMessages": "{amount} {amount, plural, one {{newImportantMessagesOne}} other {{newImportantMessagesOther}}}",
+  "newImportantMessagesOne": "new important message",
+  "newImportantMessagesOther": "new important messages",
   "trainingModeHintWithLink": "IA : Ce système est en mode formation ({learnMoreLink})",
   "learnMoreLink": "en savoir plus",
   "_learnMoreLink.comment": "learn more link",
