--- a/i18n/translations/ro.json
+++ b/i18n/translations/ro.json
@@ -53,7 +53,11 @@
   "_quoteFooter.comment": "Quoted message footer text.",
   "userIsTyping": "{user} tastează",
   "usersAndUserAreTyping": "{users} și {user} tastează",
-  "usersAreTyping": "{users} și {othersAmount} {othersAmount, plural, unul {other} altul {others}} tastează",
+  "usersAreTyping": "{usersAreTypingUsersAndAmount} {othersAmount, plural, one {{usersAreTypingOthersAmountOnePlural}} other {{usersAreTypingOthersAmountOtherPlural}}} {usersAreTypingOthersAmountTyping}",
+  "usersAreTypingUsersAndAmount": "{users} and {othersAmount}",
+  "usersAreTypingOthersAmountTyping": "are typing",
+  "usersAreTypingOthersAmountOnePlural": "other",
+  "usersAreTypingOthersAmountOtherPlural": "others",
   "imageWithDescription": "Imagine: [{description}]",
   "_imageWithDescription.comment": "**Used when rendered inline image from markdown with description.**",
   "imageWithoutDescription": "Imagine: [Fără descriere]",
@@ -112,7 +116,10 @@
   "description": "Descriere",
   "create": "Crea",
   "enter": "introduce",
-  "justInvited": "Felicitări! Tocmai ați invitat {user} {amount, plural, = 0 {} one {și încă un membru} other {și {amount} mai mulți membri}}.",
+  "justInvited": "{justInvitedCongratulations} {amount, plural, =0 {} one {{justInvitedAmountOnePlural}} other {{justInvitedAmountOtherPlural}}}.",
+  "justInvitedCongratulations": "Congratulations! You just invited {user}",
+  "justInvitedAmountOnePlural": "and one more member",
+  "justInvitedAmountOtherPlural": "and {amount} more members",
   "sharedFiles": "Fișiere partajate",
   "pinnedMesages": "Mesaje fixate",
   "groupInfo": "Informații despre grup",
@@ -333,7 +340,9 @@
   "labeledMessagesNoContentTitle": "Aici se întâmplă magia.",
   "labeledMessagesNoContentText1": "{product} vă rezumă automat conversațiile, astfel încât să le puteți răsfoi și găsi în funcție de context - noi îl numim „inteligență amplificată”.",
   "labeledMessagesNoContentText2": "Scrieți câteva sarcini sau întrebări pentru a le vedea aici!",
-  "newImportantMessages": "{amount} {amount, plural, one {mesaj important important} other {mesaje importante noi}}",
+  "newImportantMessages": "{amount} {amount, plural, one {{newImportantMessagesOne}} other {{newImportantMessagesOther}}}",
+  "newImportantMessagesOne": "new important message",
+  "newImportantMessagesOther": "new important messages",
   "trainingModeHintWithLink": "IA: Acest sistem este în modul de formare ({learnMoreLink})",
   "learnMoreLink": "Aflați mai multe",
   "_learnMoreLink.comment": "learn more link",
