--- a/i18n/translations/tr.json
+++ b/i18n/translations/tr.json
@@ -53,7 +53,11 @@
   "_quoteFooter.comment": "Quoted message footer text.",
   "userIsTyping": "{user} yazıyor",
   "usersAndUserAreTyping": "{users} ve {user} yazıyor",
-  "usersAreTyping": "{users} ve {othersAmount} {othersAmount, çoğul, biri {other} diğer {others}} yazıyor",
+  "usersAreTyping": "{usersAreTypingUsersAndAmount} {othersAmount, plural, one {{usersAreTypingOthersAmountOnePlural}} other {{usersAreTypingOthersAmountOtherPlural}}} {usersAreTypingOthersAmountTyping}",
+  "usersAreTypingUsersAndAmount": "{users} and {othersAmount}",
+  "usersAreTypingOthersAmountTyping": "are typing",
+  "usersAreTypingOthersAmountOnePlural": "other",
+  "usersAreTypingOthersAmountOtherPlural": "others",
   "imageWithDescription": "Görüntü [{description}]",
   "_imageWithDescription.comment": "**Used when rendered inline image from markdown with description.**",
   "imageWithoutDescription": "Resim: [Açıklama Yok]",
@@ -112,7 +116,10 @@
   "description": "Açıklama",
   "create": "Oluşturmak",
   "enter": "Giriş",
-  "justInvited": "Tebrikler! Az önce {user} {amount, plural, = 0 {} bir {ve bir tane daha üye} diğer {ve {amount} daha fazla üye}} davet ettiniz.",
+  "justInvited": "{justInvitedCongratulations} {amount, plural, =0 {} one {{justInvitedAmountOnePlural}} other {{justInvitedAmountOtherPlural}}}.",
+  "justInvitedCongratulations": "Congratulations! You just invited {user}",
+  "justInvitedAmountOnePlural": "and one more member",
+  "justInvitedAmountOtherPlural": "and {amount} more members",
   "sharedFiles": "Paylaşılan dosyalar",
   "pinnedMesages": "Sabitlenmiş Mesajlar",
   "groupInfo": "Grup Bilgisi",
@@ -333,7 +340,9 @@
   "labeledMessagesNoContentTitle": "Sihir yapılan yer burasıdır.",
   "labeledMessagesNoContentText1": "{product}, konuşmalarınızı otomatik olarak özetler, böylece onları bağlama göre tarayabilir ve bulabilirsiniz - biz buna \"güçlendirilmiş zeka\" diyoruz.",
   "labeledMessagesNoContentText2": "Burada görünmelerini görmek için birkaç Görev veya Soru yazın!",
-  "newImportantMessages": "{amount} {amount, plural, one {yeni önemli mesaj} other {yeni önemli mesajlar}}",
+  "newImportantMessages": "{amount} {amount, plural, one {{newImportantMessagesOne}} other {{newImportantMessagesOther}}}",
+  "newImportantMessagesOne": "new important message",
+  "newImportantMessagesOther": "new important messages",
   "trainingModeHintWithLink": "IA: Bu sistem eğitim modunda ({learnMoreLink})",
   "learnMoreLink": "daha fazla bilgi edin",
   "_learnMoreLink.comment": "learn more link",
