--- a/i18n/translations/it.json
+++ b/i18n/translations/it.json
@@ -53,7 +53,11 @@
   "_quoteFooter.comment": "Quoted message footer text.",
   "userIsTyping": "{user} sta scrivendo",
   "usersAndUserAreTyping": "{users} e {user} stanno scrivendo",
-  "usersAreTyping": "{users} e {othersAmount} {othersAmount, plural, one {other}other {others}} stanno scrivendo",
+  "usersAreTyping": "{usersAreTypingUsersAndAmount} {othersAmount, plural, one {{usersAreTypingOthersAmountOnePlural}} other {{usersAreTypingOthersAmountOtherPlural}}} {usersAreTypingOthersAmountTyping}",
+  "usersAreTypingUsersAndAmount": "{users} and {othersAmount}",
+  "usersAreTypingOthersAmountTyping": "are typing",
+  "usersAreTypingOthersAmountOnePlural": "other",
+  "usersAreTypingOthersAmountOtherPlural": "others",
   "imageWithDescription": "Immagine: {description}",
   "_imageWithDescription.comment": "**Used when rendered inline image from markdown with description.**",
   "imageWithoutDescription": "Immagine: [Nessuna descrizione]",
@@ -112,7 +116,10 @@
   "description": "Descrizione",
   "create": "Crea",
   "enter": "Entra in",
-  "justInvited": "Congratulazioni! Ha appena invitato  {user} {amount, plural, =0 {} one {e un altro membro} other {e {amount} un altro membro}}.",
+  "justInvited": "{justInvitedCongratulations} {amount, plural, =0 {} one {{justInvitedAmountOnePlural}} other {{justInvitedAmountOtherPlural}}}.",
+  "justInvitedCongratulations": "Congratulations! You just invited {user}",
+  "justInvitedAmountOnePlural": "and one more member",
+  "justInvitedAmountOtherPlural": "and {amount} more members",
   "sharedFiles": "File condivisi",
   "pinnedMesages": "Messaggi appuntati",
   "groupInfo": "Informazioni sul gruppo",
@@ -333,7 +340,9 @@
   "labeledMessagesNoContentTitle": "È qui che avviene la magia.",
   "labeledMessagesNoContentText1": "{product} fa un riassunto automatico delle conversazioni, in modo di poterle sfogliare e trovare in base al contesto - la chiamiamo \"intelligenza amplificata\".",
   "labeledMessagesNoContentText2": "Scrivi alcuni Compiti o Domande per vederli apparire qui!",
-  "newImportantMessages": "{amount} {amount, plural, one {nuovo messaggio importante} altri {nuovi messaggi importanti}}",
+  "newImportantMessages": "{amount} {amount, plural, one {{newImportantMessagesOne}} other {{newImportantMessagesOther}}}",
+  "newImportantMessagesOne": "new important message",
+  "newImportantMessagesOther": "new important messages",
   "trainingModeHintWithLink": "IA: Questo sistema è in modalità di addestramento ({learnMoreLink})",
   "learnMoreLink": "per saperne di più",
   "_learnMoreLink.comment": "learn more link",
