--- a/i18n/translations/pl.json
+++ b/i18n/translations/pl.json
@@ -53,7 +53,11 @@
   "_quoteFooter.comment": "Quoted message footer text.",
   "userIsTyping": "{user} pisze",
   "usersAndUserAreTyping": "{users} i {user} piszą",
-  "usersAreTyping": "{users} i {othersAmount} {othersAmount, plural, one {other} other {others}} pisze",
+  "usersAreTyping": "{usersAreTypingUsersAndAmount} {othersAmount, plural, one {{usersAreTypingOthersAmountOnePlural}} other {{usersAreTypingOthersAmountOtherPlural}}} {usersAreTypingOthersAmountTyping}",
+  "usersAreTypingUsersAndAmount": "{users} and {othersAmount}",
+  "usersAreTypingOthersAmountTyping": "are typing",
+  "usersAreTypingOthersAmountOnePlural": "other",
+  "usersAreTypingOthersAmountOtherPlural": "others",
   "imageWithDescription": "Obrazek: [{description}]",
   "_imageWithDescription.comment": "**Used when rendered inline image from markdown with description.**",
   "imageWithoutDescription": "Obrazek: [Brak opisu]",
@@ -112,7 +116,10 @@
   "description": "Opis",
   "create": "Stwórz",
   "enter": "Wejdź",
-  "justInvited": "Gratulacje! Zaprosiłeś tylko jednego {user} {amount, plural, =0 {} one {i jeszcze jeden członek} other {i {amount} more więcej członków}}.",
+  "justInvited": "{justInvitedCongratulations} {amount, plural, =0 {} one {{justInvitedAmountOnePlural}} other {{justInvitedAmountOtherPlural}}}.",
+  "justInvitedCongratulations": "Congratulations! You just invited {user}",
+  "justInvitedAmountOnePlural": "and one more member",
+  "justInvitedAmountOtherPlural": "and {amount} more members",
   "sharedFiles": "Pliki współdzielone",
   "pinnedMesages": "Przypięte komunikaty",
   "groupInfo": "Informacje o grupie",
@@ -333,7 +340,9 @@
   "labeledMessagesNoContentTitle": "To tutaj dzieje się magia.",
   "labeledMessagesNoContentText1": "{product} automatycznie podsumowuje Twoje konwersacja, dzięki czemu możesz je przeglądać i odnajdywać na podstawie kontekstu - my nazywamy to \"amplified intelligence\".",
   "labeledMessagesNoContentText2": "Napisz kilka zadań lub pytań, aby zobaczyć je tutaj!",
-  "newImportantMessages": "{amount} {amount, plural, one {new important message} inne {new important messages}}",
+  "newImportantMessages": "{amount} {amount, plural, one {{newImportantMessagesOne}} other {{newImportantMessagesOther}}}",
+  "newImportantMessagesOne": "new important message",
+  "newImportantMessagesOther": "new important messages",
   "trainingModeHintWithLink": "IA: Ten system jest w trybie treningowym ({learnMoreLink})",
   "learnMoreLink": "dowiedź się więcej",
   "_learnMoreLink.comment": "learn more link",
