--- a/i18n/translations/uk.json
+++ b/i18n/translations/uk.json
@@ -53,7 +53,11 @@
   "_quoteFooter.comment": "Quoted message footer text.",
   "userIsTyping": "{user} пише",
   "usersAndUserAreTyping": "{users} та {user} пишуть",
-  "usersAreTyping": "{users} та {othersAmount} {othersAmount, plural, one  {other} other {others}} пишуть",
+  "usersAreTyping": "{usersAreTypingUsersAndAmount} {othersAmount, plural, one {{usersAreTypingOthersAmountOnePlural}} other {{usersAreTypingOthersAmountOtherPlural}}} {usersAreTypingOthersAmountTyping}",
+  "usersAreTypingUsersAndAmount": "{users} and {othersAmount}",
+  "usersAreTypingOthersAmountTyping": "are typing",
+  "usersAreTypingOthersAmountOnePlural": "other",
+  "usersAreTypingOthersAmountOtherPlural": "others",
   "imageWithDescription": "Зображення: [{description}]",
   "_imageWithDescription.comment": "**Used when rendered inline image from markdown with description.**",
   "imageWithoutDescription": "Зображення: [Без Опису]",
@@ -112,7 +116,10 @@
   "description": "Опис",
   "create": "Створити",
   "enter": "Введіть",
-  "justInvited": "Вітаємо! Ви щойно запросили {user} {amount, plural, =0 {} one {та ще одного учасника} other {та {amount} більше учасників}}.",
+  "justInvited": "{justInvitedCongratulations} {amount, plural, =0 {} one {{justInvitedAmountOnePlural}} other {{justInvitedAmountOtherPlural}}}.",
+  "justInvitedCongratulations": "Congratulations! You just invited {user}",
+  "justInvitedAmountOnePlural": "and one more member",
+  "justInvitedAmountOtherPlural": "and {amount} more members",
   "sharedFiles": "Спільні Файли",
   "pinnedMesages": "Закріплені Повідомлення",
   "groupInfo": "Інформація про Групу",
@@ -333,7 +340,9 @@
   "labeledMessagesNoContentTitle": "Тут відбувається магія.",
   "labeledMessagesNoContentText1": "{product} автоматично підсумовує ваші розмови, тому ви можете переглядати та знаходити їх на основі контексту - ми називаємо це «посилений інтелект».",
   "labeledMessagesNoContentText2": "Напишіть кілька Завдань або Запитань, щоб побачити, як вони з’являються тут!",
-  "newImportantMessages": "{amount} {amount, plural, one {нове важливе повідомлення} other {нове важливе повідомлення}}",
+  "newImportantMessages": "{amount} {amount, plural, one {{newImportantMessagesOne}} other {{newImportantMessagesOther}}}",
+  "newImportantMessagesOne": "new important message",
+  "newImportantMessagesOther": "new important messages",
   "trainingModeHintWithLink": "IA: Ця система знаходиться в режимі навчання ({learnMoreLink})",
   "learnMoreLink": "дізнайтеся більше",
   "_learnMoreLink.comment": "learn more link",
