Language update from LingoHub 🤖
Project Name: Web Client
Project Link: https://translate.lingohub.com/ubergrape-gmbh/dashboard/web-client
User: Oleh Aloshkin

Easy language translations with LingoHub 🚀

--- a/i18n/translations/de.json
+++ b/i18n/translations/de.json
@@ -53,11 +53,11 @@
   "_quoteFooter.comment": "Quoted message footer text.",
   "userIsTyping": "{user} schreibt gerade",
   "usersAndUserAreTyping": "{users} und {user} schreiben gerade",
-  "usersAreTyping": "{usersAreTypingBeginning} {othersAmount, plural, one {{usersAreTypingOthersAmountOnePlural}} other {{usersAreTypingOthersAmountOtherPlural}}} {usersAreTypingEnding}",
-  "usersAreTypingUsersAndAmount": "{users} and {othersAmount}",
-  "usersAreTypingOthersAmountTyping": "are typing",
-  "usersAreTypingOthersAmountOnePlural": "other",
-  "usersAreTypingOthersAmountOtherPlural": "others",
+  "usersAreTyping": "{usersAreTypingUsersAndAmount} {othersAmount, plural, one {{usersAreTypingOthersAmountOnePlural}} other {{usersAreTypingOthersAmountOtherPlural}}} {usersAreTypingOthersAmountTyping}",
+  "usersAreTypingUsersAndAmount": "{users} und {othersAmount}",
+  "usersAreTypingOthersAmountTyping": "tippen",
+  "usersAreTypingOthersAmountOnePlural": "andere",
+  "usersAreTypingOthersAmountOtherPlural": "andere",
   "imageWithDescription": "Bild: [{description}]",
   "_imageWithDescription.comment": "**Used when rendered inline image from markdown with description.**",
   "imageWithoutDescription": "Bild: [Keine Beschreibung]",
@@ -117,9 +117,9 @@
   "create": "Erstellen",
   "enter": "Enter",
   "justInvited": "{justInvitedCongratulations} {amount, plural, =0 {} one {{justInvitedAmountOnePlural}} other {{justInvitedAmountOtherPlural}}}.",
-  "justInvitedCongratulations": "Congratulations! You just invited {user}",
-  "justInvitedAmountOnePlural": "and one more member",
-  "justInvitedAmountOtherPlural": "and {amount} more members",
+  "justInvitedCongratulations": "Herzlichen Glückwunsch! Sie haben gerade {user} eingeladen",
+  "justInvitedAmountOnePlural": "und ein weiteres Mitglied",
+  "justInvitedAmountOtherPlural": "und {amount} weitere Mitglieder",
   "sharedFiles": "Geteilte Dateien",
   "pinnedMesages": "Angepinnte Nachrichten",
   "groupInfo": "Gruppeninformation",
@@ -341,8 +341,8 @@
   "labeledMessagesNoContentText1": "{product} fasst automatisch Ihre Konversationen zusammen, damit Sie diese noch besser durchsuchen können - Wir nennen das Ganze \"Erweiterte Intelligenz\" (= \"Intelligence Amplification\" oder IA im Englischen).",
   "labeledMessagesNoContentText2": "Schreiben Sie 'mal ein paar Aufgaben oder Fragen, um diese hier erscheinen zu lassen!",
   "newImportantMessages": "{amount} {amount, plural, one {{newImportantMessagesOne}} other {{newImportantMessagesOther}}}",
-  "newImportantMessagesOne": "new important message",
-  "newImportantMessagesOther": "new important messages",
+  "newImportantMessagesOne": "neue wichtige Meldung",
+  "newImportantMessagesOther": "neue wichtige Meldungen",
   "trainingModeHintWithLink": "IA: Das System ist im Trainingsmodus ({learnMoreLink})",
   "learnMoreLink": "mehr lernen",
   "_learnMoreLink.comment": "learn more link",
