--- a/i18n/translations/es.json
+++ b/i18n/translations/es.json
@@ -54,10 +54,10 @@
   "userIsTyping": "{user} está escribiendo",
   "usersAndUserAreTyping": "{users} y {user} están escribiendo",
   "usersAreTyping": "{usersAreTypingUsersAndAmount} {othersAmount, plural, one {{usersAreTypingOthersAmountOnePlural}} other {{usersAreTypingOthersAmountOtherPlural}}} {usersAreTypingOthersAmountTyping}",
-  "usersAreTypingUsersAndAmount": "{users} and {othersAmount}",
-  "usersAreTypingOthersAmountTyping": "are typing",
-  "usersAreTypingOthersAmountOnePlural": "other",
-  "usersAreTypingOthersAmountOtherPlural": "others",
+  "usersAreTypingUsersAndAmount": "{users} y {othersAmount}",
+  "usersAreTypingOthersAmountTyping": "están escribiendo",
+  "usersAreTypingOthersAmountOnePlural": "otro",
+  "usersAreTypingOthersAmountOtherPlural": "otros",
   "imageWithDescription": "Imagen: [{description}]",
   "_imageWithDescription.comment": "**Used when rendered inline image from markdown with description.**",
   "imageWithoutDescription": "Imagen: [Sin descripción]",
@@ -117,9 +117,9 @@
   "create": "Crear",
   "enter": "Entrar en",
   "justInvited": "{justInvitedCongratulations} {amount, plural, =0 {} one {{justInvitedAmountOnePlural}} other {{justInvitedAmountOtherPlural}}}.",
-  "justInvitedCongratulations": "Congratulations! You just invited {user}",
-  "justInvitedAmountOnePlural": "and one more member",
-  "justInvitedAmountOtherPlural": "and {amount} more members",
+  "justInvitedCongratulations": "¡Felicidades! Acabas de invitar a {user}",
+  "justInvitedAmountOnePlural": "y un miembro más",
+  "justInvitedAmountOtherPlural": "y {amount} otros miembros",
   "sharedFiles": "Archivos compartidos",
   "pinnedMesages": "Mensajes Anclados",
   "groupInfo": "Información del Grupo",
@@ -341,8 +341,8 @@
   "labeledMessagesNoContentText1": "{product} resume automáticamente sus conversaciones, para que pueda navegar y encontrarlas en base al contexto - lo llamamos \"inteligencia amplificada\".",
   "labeledMessagesNoContentText2": "Escriba algunas tareas o preguntas para verlas aparecer aquí!",
   "newImportantMessages": "{amount} {amount, plural, one {{newImportantMessagesOne}} other {{newImportantMessagesOther}}}",
-  "newImportantMessagesOne": "new important message",
-  "newImportantMessagesOther": "new important messages",
+  "newImportantMessagesOne": "nuevo mensaje importante",
+  "newImportantMessagesOther": "nuevos mensajes importantes",
   "trainingModeHintWithLink": "IA: Este sistema está en modo de entrenamiento ({learnMoreLink})",
   "learnMoreLink": "más información",
   "_learnMoreLink.comment": "learn more link",
