--- a/i18n/translations/fr.json
+++ b/i18n/translations/fr.json
@@ -54,10 +54,10 @@
   "userIsTyping": "{user} est en train d'écrire",
   "usersAndUserAreTyping": "{users} et {user} sont en train d'écrire",
   "usersAreTyping": "{usersAreTypingUsersAndAmount} {othersAmount, plural, one {{usersAreTypingOthersAmountOnePlural}} other {{usersAreTypingOthersAmountOtherPlural}}} {usersAreTypingOthersAmountTyping}",
-  "usersAreTypingUsersAndAmount": "{users} and {othersAmount}",
-  "usersAreTypingOthersAmountTyping": "are typing",
-  "usersAreTypingOthersAmountOnePlural": "other",
-  "usersAreTypingOthersAmountOtherPlural": "others",
+  "usersAreTypingUsersAndAmount": "{users} et {othersAmount}",
+  "usersAreTypingOthersAmountTyping": "sont en train de écrire",
+  "usersAreTypingOthersAmountOnePlural": "autre",
+  "usersAreTypingOthersAmountOtherPlural": "autres",
   "imageWithDescription": "Image : [{description}]",
   "_imageWithDescription.comment": "**Used when rendered inline image from markdown with description.**",
   "imageWithoutDescription": "Image : [Pas de description]",
@@ -117,9 +117,9 @@
   "create": "Créer",
   "enter": "Entrer",
   "justInvited": "{justInvitedCongratulations} {amount, plural, =0 {} one {{justInvitedAmountOnePlural}} other {{justInvitedAmountOtherPlural}}}.",
-  "justInvitedCongratulations": "Congratulations! You just invited {user}",
-  "justInvitedAmountOnePlural": "and one more member",
-  "justInvitedAmountOtherPlural": "and {amount} more members",
+  "justInvitedCongratulations": "Félicitations ! Vous venez d'inviter {user}",
+  "justInvitedAmountOnePlural": "et un autre membre",
+  "justInvitedAmountOtherPlural": "et {amount} autres membres",
   "sharedFiles": "Fichiers partagés",
   "pinnedMesages": "Messages épinglés",
   "groupInfo": "Informations sur le groupe",
@@ -341,8 +341,8 @@
   "labeledMessagesNoContentText1": "{product} résume automatiquement vos conversations, vous pouvez donc les parcourir et les retrouver en fonction du contexte - c'est ce que nous appelons \"l'intelligence amplifiée\".",
   "labeledMessagesNoContentText2": "Rédigez quelques tâches ou questions pour les voir apparaître ici !",
   "newImportantMessages": "{amount} {amount, plural, one {{newImportantMessagesOne}} other {{newImportantMessagesOther}}}",
-  "newImportantMessagesOne": "new important message",
-  "newImportantMessagesOther": "new important messages",
+  "newImportantMessagesOne": "nouveau message important",
+  "newImportantMessagesOther": "nouveaux messages importants",
   "trainingModeHintWithLink": "IA : Ce système est en mode formation ({learnMoreLink})",
   "learnMoreLink": "en savoir plus",
   "_learnMoreLink.comment": "learn more link",
