--- a/i18n/translations/it.json
+++ b/i18n/translations/it.json
@@ -54,10 +54,10 @@
   "userIsTyping": "{user} sta scrivendo",
   "usersAndUserAreTyping": "{users} e {user} stanno scrivendo",
   "usersAreTyping": "{usersAreTypingUsersAndAmount} {othersAmount, plural, one {{usersAreTypingOthersAmountOnePlural}} other {{usersAreTypingOthersAmountOtherPlural}}} {usersAreTypingOthersAmountTyping}",
-  "usersAreTypingUsersAndAmount": "{users} and {othersAmount}",
-  "usersAreTypingOthersAmountTyping": "are typing",
-  "usersAreTypingOthersAmountOnePlural": "other",
-  "usersAreTypingOthersAmountOtherPlural": "others",
+  "usersAreTypingUsersAndAmount": "{users} e gli {othersAmount}",
+  "usersAreTypingOthersAmountTyping": "stanno scrivendo",
+  "usersAreTypingOthersAmountOnePlural": "altro",
+  "usersAreTypingOthersAmountOtherPlural": "altri",
   "imageWithDescription": "Immagine: {description}",
   "_imageWithDescription.comment": "**Used when rendered inline image from markdown with description.**",
   "imageWithoutDescription": "Immagine: [Nessuna descrizione]",
@@ -117,9 +117,9 @@
   "create": "Crea",
   "enter": "Entra in",
   "justInvited": "{justInvitedCongratulations} {amount, plural, =0 {} one {{justInvitedAmountOnePlural}} other {{justInvitedAmountOtherPlural}}}.",
-  "justInvitedCongratulations": "Congratulations! You just invited {user}",
-  "justInvitedAmountOnePlural": "and one more member",
-  "justInvitedAmountOtherPlural": "and {amount} more members",
+  "justInvitedCongratulations": "Congratulazioni! Hai appena invitato {user}",
+  "justInvitedAmountOnePlural": "e un altro membro",
+  "justInvitedAmountOtherPlural": "e altri {amount} membri",
   "sharedFiles": "File condivisi",
   "pinnedMesages": "Messaggi appuntati",
   "groupInfo": "Informazioni sul gruppo",
@@ -341,8 +341,8 @@
   "labeledMessagesNoContentText1": "{product} fa un riassunto automatico delle conversazioni, in modo di poterle sfogliare e trovare in base al contesto - la chiamiamo \"intelligenza amplificata\".",
   "labeledMessagesNoContentText2": "Scrivi alcuni Compiti o Domande per vederli apparire qui!",
   "newImportantMessages": "{amount} {amount, plural, one {{newImportantMessagesOne}} other {{newImportantMessagesOther}}}",
-  "newImportantMessagesOne": "new important message",
-  "newImportantMessagesOther": "new important messages",
+  "newImportantMessagesOne": "nuovo messaggio importante",
+  "newImportantMessagesOther": "nuovi messaggi importanti",
   "trainingModeHintWithLink": "IA: Questo sistema è in modalità di addestramento ({learnMoreLink})",
   "learnMoreLink": "per saperne di più",
   "_learnMoreLink.comment": "learn more link",
