--- a/i18n/translations/pl.json
+++ b/i18n/translations/pl.json
@@ -54,10 +54,10 @@
   "userIsTyping": "{user} pisze",
   "usersAndUserAreTyping": "{users} i {user} piszą",
   "usersAreTyping": "{usersAreTypingUsersAndAmount} {othersAmount, plural, one {{usersAreTypingOthersAmountOnePlural}} other {{usersAreTypingOthersAmountOtherPlural}}} {usersAreTypingOthersAmountTyping}",
-  "usersAreTypingUsersAndAmount": "{users} and {othersAmount}",
-  "usersAreTypingOthersAmountTyping": "are typing",
-  "usersAreTypingOthersAmountOnePlural": "other",
-  "usersAreTypingOthersAmountOtherPlural": "others",
+  "usersAreTypingUsersAndAmount": "{users} i {othersAmount}",
+  "usersAreTypingOthersAmountTyping": "piszą",
+  "usersAreTypingOthersAmountOnePlural": "inny",
+  "usersAreTypingOthersAmountOtherPlural": "inni",
   "imageWithDescription": "Obrazek: [{description}]",
   "_imageWithDescription.comment": "**Used when rendered inline image from markdown with description.**",
   "imageWithoutDescription": "Obrazek: [Brak opisu]",
@@ -117,9 +117,9 @@
   "create": "Stwórz",
   "enter": "Wejdź",
   "justInvited": "{justInvitedCongratulations} {amount, plural, =0 {} one {{justInvitedAmountOnePlural}} other {{justInvitedAmountOtherPlural}}}.",
-  "justInvitedCongratulations": "Congratulations! You just invited {user}",
-  "justInvitedAmountOnePlural": "and one more member",
-  "justInvitedAmountOtherPlural": "and {amount} more members",
+  "justInvitedCongratulations": "Gratulacje! Właśnie zaprosiłeś {user}",
+  "justInvitedAmountOnePlural": "i jeszcze jeden użytkownik",
+  "justInvitedAmountOtherPlural": "i {amount} więcej użytkowników",
   "sharedFiles": "Pliki współdzielone",
   "pinnedMesages": "Przypięte komunikaty",
   "groupInfo": "Informacje o grupie",
@@ -341,8 +341,8 @@
   "labeledMessagesNoContentText1": "{product} automatycznie podsumowuje Twoje konwersacja, dzięki czemu możesz je przeglądać i odnajdywać na podstawie kontekstu - my nazywamy to \"amplified intelligence\".",
   "labeledMessagesNoContentText2": "Napisz kilka zadań lub pytań, aby zobaczyć je tutaj!",
   "newImportantMessages": "{amount} {amount, plural, one {{newImportantMessagesOne}} other {{newImportantMessagesOther}}}",
-  "newImportantMessagesOne": "new important message",
-  "newImportantMessagesOther": "new important messages",
+  "newImportantMessagesOne": "nowy ważny komunikat",
+  "newImportantMessagesOther": "nowe ważne wiadomości",
   "trainingModeHintWithLink": "IA: Ten system jest w trybie treningowym ({learnMoreLink})",
   "learnMoreLink": "dowiedź się więcej",
   "_learnMoreLink.comment": "learn more link",
