--- a/i18n/translations/uk.json
+++ b/i18n/translations/uk.json
@@ -1,7 +1,7 @@
 {
   "initialGreeting": "Привіт!",
   "enableNotificationsRequest": "Будь ласка, увімкніть сповіщення на робочому столі",
-  "notificationsExplanation": "так що учасники вашої команди можуть зв’язатися з вами на {product}.",
+  "notificationsExplanation": "щоб учасники вашої команди моги зв’язатися з вами на {product}.",
   "enableNotifications": "Увімкнути сповіщення",
   "connectionTrouble": "У нас виникли проблеми з підключенням до {product}.",
   "tryToReconnect": "Ми спробуємо відновити зв’язок",
@@ -18,7 +18,7 @@
   "enterDetails": "Введіть Деталі",
   "privateMessageHint": "(Приватна Розмова)",
   "_privateMessageHint.comment": "Browser notification private message hint.",
-  "groupInviteNotificationTitle": "{name} запрошує вас до групи {group}",
+  "groupInviteNotificationTitle": "{name} запросив вас до групи {group}",
   "_groupInviteNotificationTitle.comment": "Browser notification group invite title.",
   "groupInviteNotificationContent": "{name} (Запрошення до групи)",
   "_groupInviteNotificationContent.comment": "Browser notification group invite content.",
@@ -54,10 +54,10 @@
   "userIsTyping": "{user} пише",
   "usersAndUserAreTyping": "{users} та {user} пишуть",
   "usersAreTyping": "{usersAreTypingUsersAndAmount} {othersAmount, plural, one {{usersAreTypingOthersAmountOnePlural}} other {{usersAreTypingOthersAmountOtherPlural}}} {usersAreTypingOthersAmountTyping}",
-  "usersAreTypingUsersAndAmount": "{users} and {othersAmount}",
-  "usersAreTypingOthersAmountTyping": "are typing",
-  "usersAreTypingOthersAmountOnePlural": "other",
-  "usersAreTypingOthersAmountOtherPlural": "others",
+  "usersAreTypingUsersAndAmount": "{users} та {othersAmount}",
+  "usersAreTypingOthersAmountTyping": "набирають текст",
+  "usersAreTypingOthersAmountOnePlural": "інший",
+  "usersAreTypingOthersAmountOtherPlural": "інші",
   "imageWithDescription": "Зображення: [{description}]",
   "_imageWithDescription.comment": "**Used when rendered inline image from markdown with description.**",
   "imageWithoutDescription": "Зображення: [Без Опису]",
@@ -117,9 +117,9 @@
   "create": "Створити",
   "enter": "Введіть",
   "justInvited": "{justInvitedCongratulations} {amount, plural, =0 {} one {{justInvitedAmountOnePlural}} other {{justInvitedAmountOtherPlural}}}.",
-  "justInvitedCongratulations": "Congratulations! You just invited {user}",
-  "justInvitedAmountOnePlural": "and one more member",
-  "justInvitedAmountOtherPlural": "and {amount} more members",
+  "justInvitedCongratulations": "Вітаємо! Ви щойно запросили {user}",
+  "justInvitedAmountOnePlural": "і ще один учасник",
+  "justInvitedAmountOtherPlural": "та ще {amount}  учасників",
   "sharedFiles": "Спільні Файли",
   "pinnedMesages": "Закріплені Повідомлення",
   "groupInfo": "Інформація про Групу",
@@ -170,7 +170,7 @@
   "_skipIntro.comment": "Intro footer skip button",
   "buttonContinue": "Продовжити",
   "_buttonContinue.comment": "Intro button continue.",
-  "skipIfDone": "Вже готово? {skip}",
+  "skipIfDone": "Вже закінчили? {skip}",
   "_skipIfDone.comment": "Intro footer",
   "inviteGuest": "Запросіть гостя до цієї групи",
   "emailAddresses": "Адреси електронної пошти",
@@ -231,7 +231,7 @@
   "_inlineStylesExample.comment": "Markdown: inline typography styles example",
   "links": "Посилання",
   "_links.comment": "Title",
-  "linksExample": "[Посилання на ChatGrape] (https://chatgrape.com)",
+  "linksExample": "[Посилання на ChatGrape](https://chatgrape.com)",
   "_linksExample.comment": "Markdown: link example",
   "codeSnippets": "Сніпети Коду",
   "_codeSnippets.comment": "Title",
@@ -271,8 +271,8 @@
   "favorites": "Вибране",
   "recent": "Недавнє",
   "enterGroupName": "Введіть назву групи",
-  "private": "Приватне",
-  "public": "Загальнодоступне",
+  "private": "Приватнa",
+  "public": "Загальнодоступна",
   "notificationSettingsTitle": "Сповіщення в групі {group}",
   "_notificationSettingsTitle.comment": "Notification settings dialog.",
   "notificationSettingDefault": "Початкові Налаштування Сповіщень",
@@ -341,8 +341,8 @@
   "labeledMessagesNoContentText1": "{product} автоматично підсумовує ваші розмови, тому ви можете переглядати та знаходити їх на основі контексту - ми називаємо це «посилений інтелект».",
   "labeledMessagesNoContentText2": "Напишіть кілька Завдань або Запитань, щоб побачити, як вони з’являються тут!",
   "newImportantMessages": "{amount} {amount, plural, one {{newImportantMessagesOne}} other {{newImportantMessagesOther}}}",
-  "newImportantMessagesOne": "new important message",
-  "newImportantMessagesOther": "new important messages",
+  "newImportantMessagesOne": "нове важливе повідомлення",
+  "newImportantMessagesOther": "нові важливі повідомлення",
   "trainingModeHintWithLink": "IA: Ця система знаходиться в режимі навчання ({learnMoreLink})",
   "learnMoreLink": "дізнайтеся більше",
   "_learnMoreLink.comment": "learn more link",
