Language update from LingoHub 🤖
Project Name: Web Client: Grape Browser
Project Link: https://translate.lingohub.com/ubergrape-gmbh/dashboard/web-client-colon-grape-browser
User: Oleh Aloshkin

Easy language translations with LingoHub 🚀

--- a/i18n/translations/es.json
+++ b/i18n/translations/es.json
@@ -18,14 +18,14 @@
   "_resultsAmountHint.comment": "Amount of results hin in the grape-search header.",
   "noResults": "No hay resultados.",
   "amountResults": "{resultsAmount} {resultsAmount, plural, one {{resultsAmountResult}} other {{resultsAmountResults}}}",
-  "resultsAmountResult": "Result",
-  "resultsAmountResults": "Results",
+  "resultsAmountResult": "Resultado",
+  "resultsAmountResults": "Resultados",
   "serviesHeadline": "seleccionar el servicio",
   "_serviesHeadline.comment": "**Headline in services list of grape-browser**",
   "noServicesFound": "No se han encontrado servicios.",
-  "emojiEmoticons": "emoticons",
-  "emojiNature": "nature",
-  "emojiObjects": "objects",
-  "emojiPlaces": "places",
-  "emojiOther": "other"
+  "emojiEmoticons": "emoticonos",
+  "emojiNature": "naturaleza",
+  "emojiObjects": "objetos",
+  "emojiPlaces": "lugares",
+  "emojiOther": "otros"
 }
