--- a/i18n/translations/it.json
+++ b/i18n/translations/it.json
@@ -18,14 +18,14 @@
   "_resultsAmountHint.comment": "Amount of results hin in the grape-search header.",
   "noResults": "Nessun risultato.",
   "amountResults": "{resultsAmount} {resultsAmount, plural, one {{resultsAmountResult}} other {{resultsAmountResults}}}",
-  "resultsAmountResult": "Result",
-  "resultsAmountResults": "Results",
+  "resultsAmountResult": "Risultato",
+  "resultsAmountResults": "Risultati",
   "serviesHeadline": "seleziona il servizio",
   "_serviesHeadline.comment": "**Headline in services list of grape-browser**",
   "noServicesFound": "Nessun servizio trovato.",
   "emojiEmoticons": "emoticons",
-  "emojiNature": "nature",
-  "emojiObjects": "objects",
-  "emojiPlaces": "places",
-  "emojiOther": "other"
+  "emojiNature": "natura",
+  "emojiObjects": "oggetti",
+  "emojiPlaces": "posti",
+  "emojiOther": "altro"
 }
