--- a/i18n/translations/tr.json
+++ b/i18n/translations/tr.json
@@ -1,31 +1,31 @@
 {
-  "noEmojiFound": "Emoji bulunamadı.",
-  "enterKeywordPlaceholder": "Bir anahtar kelime girin…",
-  "enterMessagePlaceholder": "Bir mesaj girin…",
-  "groupPostingLimitedPlaceholder": "Bu gruba gönderme sınırlandırılmıştır.",
-  "willNotifyGroup": "- bu gruptaki herkese bildir",
+  "noEmojiFound": "",
+  "enterKeywordPlaceholder": "",
+  "enterMessagePlaceholder": "",
+  "groupPostingLimitedPlaceholder": "",
+  "willNotifyGroup": "",
   "_willNotifyGroup.comment": "*Describe willNotifyGroup*: this string is describing action",
-  "wontNotifyGroup": "- grup üyelerini bilgilendirmez",
+  "wontNotifyGroup": "",
   "_wontNotifyGroup.comment": "*Describe wontNotifyGroup*: this string is describing action",
-  "notInGroup": "grupta değil",
-  "insertAction": "Mesaja ekle",
-  "openAction": "Açık",
-  "noDetailForItem": "Bu öğe için detay bilgisi yok",
-  "searchInfo": "{plusIcon} 'u tıklayarak veya klavyenizdeki artı tuşuna basarak Wikipedia, YouTube, Giphy ve {tools}' da arayın",
-  "yourBusinessTools": "iş araçlarınız",
+  "notInGroup": "",
+  "insertAction": "",
+  "openAction": "",
+  "noDetailForItem": "",
+  "searchInfo": "",
+  "yourBusinessTools": "",
   "_yourBusinessTools.comment": "*Describe yourBusinessTools*: link used in sentence 'Search Wikipedia, Youtube, Giphy and {tools}'",
-  "resultsAmountHint": "{amount} sonuçları",
+  "resultsAmountHint": "",
   "_resultsAmountHint.comment": "Amount of results hin in the grape-search header.",
-  "noResults": "Sonuç yok.",
-  "amountResults": "{resultsAmount} {resultsAmount, plural, one {{resultsAmountResult}} other {{resultsAmountResults}}}",
-  "resultsAmountResult": "Result",
-  "resultsAmountResults": "Results",
-  "serviesHeadline": "hizmet seçin",
+  "noResults": "",
+  "amountResults": "",
+  "resultsAmountResult": "",
+  "resultsAmountResults": "",
+  "serviesHeadline": "",
   "_serviesHeadline.comment": "**Headline in services list of grape-browser**",
-  "noServicesFound": "Hizmet bulunamadı.",
-  "emojiEmoticons": "emoticons",
-  "emojiNature": "nature",
-  "emojiObjects": "objects",
-  "emojiPlaces": "places",
-  "emojiOther": "other"
+  "noServicesFound": "",
+  "emojiEmoticons": "",
+  "emojiNature": "",
+  "emojiObjects": "",
+  "emojiPlaces": "",
+  "emojiOther": ""
 }
