--- a/i18n/translations/de.json
+++ b/i18n/translations/de.json
@@ -18,14 +18,14 @@
   "_resultsAmountHint.comment": "Amount of results hin in the grape-search header.",
   "noResults": "Keine Ergebnisse.",
   "amountResults": "{resultsAmount} {resultsAmount, plural, one {{resultsAmountResult}} other {{resultsAmountResults}}}",
-  "resultsAmountResult": "Result",
-  "resultsAmountResults": "Results",
+  "resultsAmountResult": "Ergebnis",
+  "resultsAmountResults": "Ergebnisse",
   "serviesHeadline": "Service auswählen",
   "_serviesHeadline.comment": "**Headline in services list of grape-browser**",
   "noServicesFound": "Keine Services gefunden.",
-  "emojiEmoticons": "emoticons",
-  "emojiNature": "nature",
-  "emojiObjects": "objects",
-  "emojiPlaces": "places",
-  "emojiOther": "other"
+  "emojiEmoticons": "Emoticons",
+  "emojiNature": "Natur",
+  "emojiObjects": "Objekte",
+  "emojiPlaces": "Orte",
+  "emojiOther": "Andere"
 }
