--- a/i18n/translations/pl.json
+++ b/i18n/translations/pl.json
@@ -18,14 +18,14 @@
   "_resultsAmountHint.comment": "Amount of results hin in the grape-search header.",
   "noResults": "Brak wyników.",
   "amountResults": "{resultsAmount} {resultsAmount, plural, one {{resultsAmountResult}} other {{resultsAmountResults}}}",
-  "resultsAmountResult": "Result",
-  "resultsAmountResults": "Results",
+  "resultsAmountResult": "Wynik",
+  "resultsAmountResults": "Wyniki",
   "serviesHeadline": "wybrana usługa",
   "_serviesHeadline.comment": "**Headline in services list of grape-browser**",
   "noServicesFound": "Nie znaleziono żadnych usług.",
-  "emojiEmoticons": "emoticons",
-  "emojiNature": "nature",
-  "emojiObjects": "objects",
-  "emojiPlaces": "places",
-  "emojiOther": "other"
+  "emojiEmoticons": "emotikony",
+  "emojiNature": "charakter",
+  "emojiObjects": "obiekty",
+  "emojiPlaces": "miejsca",
+  "emojiOther": "inny"
 }
